--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
     "@types/react-redux": "^7.1.34",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0",
     "use-debounce": "^10.0.6"
   },
