--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,6 +22,7 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@store/*": ["src/redux/*"],
+      "@api/*": ["src/api/*"],
       "@types": ["src/types"]
     },
 
